# esun-text-to-sql-poc

./: .env.example  .gitignore  PRD.md  README.md  SPEC.md  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/: .env.example  SPEC.md  pyproject.toml
backend/data/: meta.db  sessions.db-shm  sessions.db-wal  users.yaml
backend/src/text_to_sql_backend/: agent.py  api.py  auth.py  checkpoint.py  config.py  server.py  session_meta.py
backend/src/text_to_sql_backend/middleware/: question_guard.py  schema_prompt.py  sql_retry.py
backend/tests/: test_middleware.py  test_tools.py
backup/: 会议纪要_from_Jim.md  客户访谈内容.md
backup/web-app-sentry/: index.html
backup/web-app-sentry/src/: App.tsx  index.css
backup/web-app-sentry/src/api/: client.ts
backup/web-app-sentry/src/components/: ChatArea.tsx  DebugPanel.tsx  LoginPage.tsx  MessageBubble.tsx  Sidebar.tsx  TypingIndicator.tsx
backup/web-app-sentry/src/hooks/: useSession.ts
backup/web-app-sentry/src/utils/: formatText.ts
cli-client/: .env.example  SPEC.md  pyproject.toml
cli-client/src/text_to_sql_cli/: __main__.py  client.py  main.py
cli-client/tests/: test_cli.py
data/: init_db.py
meetings/: need_from_customer.md  next_meeting_prepare.md
src/text_to_sql/: __main__.py  agent.py  config.py  db.py  main.py  prompts.py
src/text_to_sql/middleware/: schema_prompt.py
tests/: test_debug.py  test_middleware.py  test_tools.py
web-app/: SPEC.md  index.html  package-lock.json  package.json  sample_ui.jsx
web-app/src/: App.tsx
web-app/src/components/: ChatArea.tsx  DebugPanel.tsx  LoginPage.tsx  MessageBubble.tsx  Sidebar.tsx  TypingIndicator.tsx
web-app/src/contexts/: AuthContext.tsx
web-app/src/hooks/: useChat.ts
web-app/src/utils/: formatText.ts
