[project]
name = "text-to-sql-backend"
version = "0.1.0"
description = "Matrix VC Text-to-SQL Backend API"
readme = "SPEC.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1",
    "langchain-openai",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "fastapi",
    "uvicorn[standard]",
    "langgraph-checkpoint-sqlite>=3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[project.scripts]
text-to-sql-server = "text_to_sql_backend.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text_to_sql_backend"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
