[project]
name = "text-to-sql-cli"
version = "0.1.0"
description = "Matrix VC Text-to-SQL CLI Client"
readme = "SPEC.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "rich",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[project.scripts]
text-to-sql-cli = "text_to_sql_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text_to_sql_cli"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
